src/styles/styles.css
/* Utilities*/
:root {
  --bg-color: #ffffff;
  --header-bg-color: #000000d4;
  --even-row-color: #d5d1d1;
  --odd-row-color: #e1e0e0;
  --work-highlight: #e6f7ff;
  --off-highlight: #ffedea;
  --button-color: #ffd700;
  --button-hover: rgb(249, 205, 28);
  --button-active: #dc143c;
}

* {
  font-family: Montserrat;
  font-weight: 800;
  font-size: 20px;
  margin: 0;
  padding: 0;
  color: black;
}

html {
  height: 100%;
  background-color: #faf9f6;
}

body > h1 {
  font-size: 36px;
  margin-left: 4rem;
}

.header {
  padding: 0rem 1rem;
  color: black;
  background-color: var(--header-bg-color);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#navHeader {
  display: none;
  cursor: pointer;
}

#dropdown {
  display: flex;
  flex-direction: row;
  gap: 1rem;
}
a {
  text-decoration: none;
}

li {
  list-style: none;
}

.menu {
  font-size: 16px;
  cursor: pointer;
  border-radius: 0.25rem;
  background-color: gold;
  box-shadow: 1px 3px 2px 1px #faf9f6;
  color: black;
  display: flex;
  flex-direction: column;
  padding: 0.75rem;
  justify-content: center;
  align-items: center;
  user-select: none;
  transition:
    box-shadow 0.2s,
    transform 0.2s;
}

.menu:hover {
  box-shadow: 0px 1px 2px 0px;
  transform: translateY(2px);
}

.header > img {
  width: 90px;
}

h1 {
  font-size: 28px;
  margin-left: 1rem;
}

.infoBox {
  margin: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

button {
  font-size: 16px;
  border-radius: 0.25rem;
  background-color: gold;
  box-shadow: 1px 3px 2px 1px;
  color: black;
  padding: 1rem 1rem;
  transition:
    box-shadow 0.2s,
    transform 0.2s;
}

button:hover {
  cursor: pointer;
  box-shadow: 0px 1px 2px 0px;
  transform: translateY(2px);
  background-color: var(--button-hover);
}

#moreInfo {
  border-radius: 0.25rem;
  background-color: var(--button-color);
  box-shadow: 1px 3px 2px 1px;
  color: black;
  flex-direction: column;
  padding: 0.2rem 1rem;
  user-select: none;
  transition:
    box-shadow 0.2s,
    transform 0.2s;
  max-width: 720px;
  cursor: pointer;
}

#moreInfo:hover {
  box-shadow: 0px 2px 2px 0px;
  transform: translateY(2px);
}

#moreInfo > p {
  line-height: 25px;
}

#ageForm,
#scheduling,
#box,
.todo {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 0.25rem;
  max-width: 90%;
  min-width: 50%;
  margin-left: none;
  margin-right: none;
  border-radius: 0.5rem;
  padding: 5rem;
  transition:
    box-shadow 0.2s,
    transform 0.2s;
}

input,
textarea {
  border: 2px solid black;
  border-radius: 0.5rem;
  padding: 0.5rem;
  font-size: 16px;
  min-width: 80px;
  max-width: 420px;
  min-height: 32px;
}

.toggleInfo {
  display: flex;
  margin: 1rem;
  gap: 2rem;
  align-items: center;
}
.switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: 0.4s;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: gold;
}

input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}

.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

footer {
  display: flex;
  justify-content: center;
  padding: rem;
  text-align: center;
  font-size: 14px;
  margin-top: 10rem;
}

footer a {
  cursor: pointer;
}

a > i:hover {
  transform: scale(1.2);
}

/* Home Page*/

#intro {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  padding: 5rem 2rem;
  line-height: 1.4;
  color: black;
}

.reviews,
.videoBox {
  display: flex;
  flex-direction: column;
  align-items: center;
  transition:
    box-shadow 0.2s,
    transform 0.2s;
}

.videoBox {
  margin-top: 5rem;
  padding-bottom: 5rem;
}

.videoBox > h2 {
  font-size: 20px;
  text-align: center;
  margin: 2rem;
}

iframe {
  border: none;
  min-width: 0;
  border-radius: 0.5rem;
}

#reviewBox {
  display: flex;
  flex-direction: column;
  padding: 5rem 0rem;
  justify-content: center;
  align-items: center;
  width: 100%;
}

#reviewBox > h3 {
  text-align: center;
}

#reviewForm {
  margin: 2rem;
  max-width: 85%;
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

#reviewForm > button {
  max-width: 18rem;
  justify-content: center;
}

/* AgeCalc*/

#ageForm {
  grid-template-columns: 1fr;
  min-height: 300px;
  max-height: none;
  width: 90%;
}

#ageForm > input {
  margin-bottom: 1rem;
  width: 80%;
}

#ageForm > button {
  margin-top: 0;
  max-width: 13rem;
  max-height: 4rem;
}

/* Schedule*/

#tableWrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

#generate {
  margin-top: 3rem;
  margin-bottom: 0;
}

table {
  width: 90%;
  border-collapse: collapse;
}

th {
  border: transparent;
  text-align: center;
  background-color: var(--header-bg-color);
  color: white;
  border: 1px solid var(--header-bg-color);
  padding: 1rem;
  margin: 1rem auto;
}

tr:nth-child(even) {
  background-color: var(--even-row-color);
  height: 3rem;
  text-align: center;
}

tr:nth-child(odd) {
  background-color: var(--odd-row-color);
  height: 3rem;
  text-align: center;
}

/* Weather*/

#box {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin-bottom: 1rem;
  margin-top: 0;
}

#box > form {
  flex-direction: row;
}

#conditionDiv,
#tempDiv,
#windDiv,
#humidityDiv,
#visDiv {
  margin: 3rem;
  font-size: 20px;
}

#tempDataC,
#windDataEU,
#visDataC {
  display: none;
}

/* Checklist*/

.todo {
  color: black;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
  margin: 1rem;
}

#addForm {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

#addForm > input {
  grid-column: 1;
  min-height: 1rem;
  justify-self: center;
}

#addForm > button {
  grid-column: 3;
  justify-self: center;
}

#taskList > div {
  margin-top: 3rem;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  align-items: center;
  justify-items: center;
  grid-gap: 0.25rem;
  padding-bottom: 1rem;
  margin-bottom: 2rem;
  border-bottom: 3px solid black;
}

#checkbox {
  box-shadow: none;
}

#taskList > div > input,
#taskList > div > span,
#taskList > div > button {
  margin: 0;
}

#taskList > div > input {
  grid-column: 1;
}

#taskList > div > span {
  grid-column: 2;
}

#taskList > div > button {
  grid-column: 3;
}

#taskList > div > button:hover {
  background-color: var(--button-active);
}

/*Media Queries*/

@media (max-width: 700px) {
  html {
    font-size: 16px;
  }

  #navBar {
    margin: 0.2rem;
    border-radius: 0.25rem;
    position: relative;
  }

  #navHeader {
    font-size: 30px;
    border: 1px solid black;
    border-radius: 0.25rem;
    background-color: var(--button-color);
    box-shadow: none;
    color: black;
    display: flex;
    flex-direction: column;
    padding: 0.8rem 3rem;
    align-items: center;
    user-select: none;
    transition: transform 0.2s;
  }

  #navHeader:hover {
    cursor: pointer;
    transform: translateY(2px);
    background-color: var(--button-hover);
  }

  #dropdown {
    display: none;
    position: absolute;
    top: 100%;
    left: 0;
    z-index: 1000;
    flex-direction: column;
    gap: 0;
    border-radius: 0 0 0.5rem 0.5rem;
    width: 100%;
  }

  #dropdown.show {
    display: flex;
  }

  #dropdown a {
    text-align: center;
    box-shadow: none;
    font-size: 16px;
    color: black;
    padding: 4;
    border: 2px solid black;
    text-decoration: none;
  }
  #dropdown a:hover {
    background-color: var(--button-hover);
  }
  #box,
  .todo {
    padding: 1.8rem;
    margin: 1rem;
  }

  #reviewForm {
    padding: 1rem;
  }
  .videoBox {
    margin: 0;
  }
  iframe {
    margin: 0;
    padding: 0;
    width: 100%;
  }
  #scheduling,
  #ageForm {
    width: fit-content;
  }

  #ageForm {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-left: 3rem;
  }

  #ageForm > input {
    height: 3rem;
    max-width: 190px;
    margin: 0;
  }

  #addForm {
    justify-content: center;
  }
  #addForm > input {
    width: full;
  }
  a:hover {
    cursor: pointer;
    transform: scale(1.02);
    text-decoration: underline;
  }
  form {
    width: 100%;
  }
  table {
    width: 80%;
  }
}

